@@ -1,45 +1,0 @@
-libanl-.*.so
-libutil-.*.so
-libnss_hesiod-.*.so
-libcrypt-.*.so
-libnss_compat-.*.so
-libm-.*.so
-libr.so
-libpcprofile.so
-libnss_nis-.*.so
-libSegFault.so
-libpthread-.*.so
-librt-.*.so
-libnss_dns-.*.so
-libdl-.*.so
-libBrokenLocale-.*.so
-libnss_nisplus-.*.so
-libthread_db-1.0.so
-libmemusage.so
-libcidn-.*.so
-libnss_files-.*.so
-libnsl-.*.so
-libc-.*.so
-ld-.*.so
-libnss_nis.so
-libthread_db.so
-libanl.so
-libr.so
-libnss_compat.so
-libm.so
-libnss_dns.so
-libpthread.so
-libc.so
-librt.so
-libcidn.so
-libnss_nisplus.so
-libnsl.so
-libutil.so
-libBrokenLocale.so
-ld-linux.so
-libnss_files.so
-libdl.so
-libnss_hesiod.so
-libcrypt.so
-linux-vdso.so
-linux-gate.so
