@@ -8,6 +8,8 @@ git-annex (5.20131214) UNRELEASED; urgency=low
     into a directory in PATH as an alternative installation method, and will
     use readlink to find where the build was unpacked.
   * Include man pages in Linux and OSX standalone builds.
+  * Linux standalone build now includes its own glibc and forces the linker to
+    use it, to remove dependence on the host glibc.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 15 Dec 2013 13:32:49 -0400
 
